@@ -242,7 +242,7 @@ void FreebaseFetcherTest::testMovieTitle() {
   QCOMPARE(entry->field(QLatin1String("title")).toLower(), QLatin1String("the man from snowy river"));
   QCOMPARE(entry->field(QLatin1String("director")), QLatin1String("George T. Miller"));
   QCOMPARE(entry->field(QLatin1String("producer")), QLatin1String("Simon Wincer"));
-  QCOMPARE(entry->field(QLatin1String("writer")), QLatin1String("Banjo Paterson"));
+  QCOMPARE(entry->field(QLatin1String("writer")), QLatin1String("Cul Cullen; John Dixon"));
   QCOMPARE(entry->field(QLatin1String("composer")), QLatin1String("Bruce Rowland"));
   QCOMPARE(entry->field(QLatin1String("studio")), QLatin1String("20th Century Fox"));
   QCOMPARE(entry->field(QLatin1String("certification")), QLatin1String("PG (USA)"));
